--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Statistics 285 # Website name
-baseurl: '' # Website URL
+baseurl: 'https://stats285shilaan.netlify.app' # Website URL
 copyright: '© 2021 Shilaan Alzahawi' # Footer text, e.g. '© {year} Me'
 
 ############################
